--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,4 +5,20 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    position: relative;
+}
+
+.logo img {
+    position: absolute;
+    top: 0;
+    left: 15%;
+    height: 90px;
+}
+.name {
+    font-family: 'Permanent Marker', cursive;
+    font-size: 30px;
+    position: absolute;
+    color: #0d82c6;
+    top: 40%;
+    left: 23%;
 }
