--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -1,18 +1,21 @@
 .main {
-    height: 100vh;
-    background-color: cadetblue;
+    height: 110vh;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    background-color: black;
 }
 
 .main_container {
     height: 100vh;
     width: 70%;
     border: 1px solid;
+    /*background-color: cadetblue;*/
 
     display: flex;
     justify-content: space-between;
     align-items: center;
+
 }
 
 .photo {
@@ -47,4 +50,10 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.space {
+    width: 100%;
+    height: 100px;
+    background-color: black;
 }
