--- a/src/components/Header/Nav/Nav.module.css
+++ b/src/components/Header/Nav/Nav.module.css
@@ -1,32 +1,34 @@
 .nav {
-    border: 1px solid;
-    width: 370px;
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 70%;
 }
-.nav a {
+.navItems {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 60%;
+}
+
+.link a {
     text-decoration: none;
-    font-size: 16px;
+    color: white;
+    font-size: 20px;
     font-family: Poppins, serif;
-    color: #fff;
+    transition-duration: .5s;
 }
-.button {
-    position: relative;
-    overflow: hidden;
+.link:hover a {
+    color: #0d82c6;
+    transition: .5s;
 }
 
-.line {
-    position: absolute;
-    display: block;
-
-    height: 3px;
-    background: #0d82c6;
-    bottom: 0;
-    left: -100%;
-    width: 100%;
-    transition-duration: 1s;
+.logo {
+    display: flex;
+    text-align: center;
+    width: 40%;
 }
-.nav a:hover .line {
-    left: 0;
-    transition: .8s;
+.logo img {
+    height: 90px;
 }
