--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -10,12 +10,9 @@
     height: 100vh;
     width: 70%;
     border: 1px solid;
-    /*background-color: cadetblue;*/
-
     display: flex;
     justify-content: space-between;
     align-items: center;
-
 }
 
 .photo {
@@ -26,30 +23,28 @@
 
 .discription {
     width: 500px;
-    background-color: #a0dc62;
+    font-family: Poppins, serif;
 }
 
 .discription h1 {
     font-size: 50px;
-}
-.icons {
-    display: flex;
-}
-.icon {
-    width: 50px;
-    height: 50px;
-    margin: 0 5px;
-    border-radius: 50%;
-    background-color: #c63f59;
+    color: white;
 }
 
-.title {
-    width: 16px;
-    height: 16px;
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.discription p {
+    color: #afafaf;
+    font-size: 14px;
+    margin-bottom: 25px;
+}
+.hello {
+    font-size: 18px;
+    color: white;
+}
+
+.job {
+    text-shadow: 0 0 0 #111111;
+    color: #2370bb;
+    font-size: 25px;
 }
 
 .space {
