--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,9 @@
 .header {
-    background-color: black;
     display: flex;
-    flex-direction: row;
     justify-content: center;
-    height: 90px;
+    /*background-color: gray;*/
 }
 
+.logo {
+    height: 100%;
+}
