--- a/src/components/Header/Nav/Nav.module.css
+++ b/src/components/Header/Nav/Nav.module.css
@@ -1,17 +1,3 @@
-.nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 70%;
-}
-.navItems {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    width: 60%;
-}
-
 .link a {
     text-decoration: none;
     color: white;
@@ -19,16 +5,17 @@
     font-family: Poppins, serif;
     transition-duration: .5s;
 }
+
 .link:hover a {
     color: #0d82c6;
     transition: .5s;
 }
 
-.logo {
-    display: flex;
-    text-align: center;
-    width: 40%;
-}
-.logo img {
-    height: 90px;
+
+
+.menu_container:hover {
+    color: white;
+    background-color: #0d82c6;
+    transition: .3s;
+    cursor: pointer;
 }
