--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -1,45 +1,15 @@
-.skills {
-    height: 120vh;
-    background-color: black;
-    display: flex;
-    justify-content: center;
-}
 .title {
-    position: relative;
-    text-align: center;
-    max-width: 600px;
-    padding-bottom: 30px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 55px;
+    margin-bottom: 60px;
     font-family: Poppins, serif;
-    text-transform: uppercase;
-    color: #fff;
 }
+
 .title h2 {
     font-size: 40px;
+    padding-bottom: 20px;
+    border-bottom: 3px solid #0d82c6;
+    color: white;
 }
 
 .title span {
     color: #0d82c6;
-}
-
-.skills_container {
-    height: 100vh;
-    width: 70%;
-}
-.skills_items {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-}
-
-.bar {
-    width: 100px;
-    height: 3px;
-    margin: 0 auto;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #0d82c6;
 }
