--- a/src/components/SocialNetworks/SocialNetworks.module.css
+++ b/src/components/SocialNetworks/SocialNetworks.module.css
@@ -8,22 +8,28 @@
     border-radius: 50%;
     background-color: #1f1f1f;
     transition-duration: .5s;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 .icon {
-    width: 30px;
-    height: 30px;
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 50%;
+    height: 50%;
 }
-
 .icon img {
-    width: 30px;
+    width: 100%;
 }
 
 .icon_box:hover {
     background-color: #0d82c6;
     transition: .5s;
     transform: translateY(-10%);
+}
+
+@media screen and (max-width: 281px){
+    .icon_box {
+        width: 40px;
+        height: 40px;
+    }
 }
