--- a/src/components/Header/Containers.module.css
+++ b/src/components/Header/Containers.module.css
@@ -3,14 +3,14 @@
     justify-content: space-between;
     width: 75%;
     min-height: 90px;
+    max-height: 0;
+    overflow: hidden;
 }
 
 .logo_container {
     display: flex;
     min-width: 30%;
     height: 90px;
-
-    /*background-color: #0d82c6;*/
 }
 
 .nav_container {
@@ -25,11 +25,13 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-
     width: 100%;
 }
 
 .menu_container {
+    position: absolute;
+    top: 20px;
+    right: 20px;
     display: none;
     justify-content: center;
     align-items: center;
@@ -57,14 +59,24 @@
 
 @media screen and (max-width: 931px){
     .nav_container {
-        width: 50px;
-        justify-content: flex-end;
+        padding: 40px 100px;
     }
     .navItems_container {
         display: none;
     }
     .menu_container {
         display: flex;
+    }
+    .header_container.menu_collapsed {
+        display: block;
+        max-height: 300px;
+        border-bottom: 3px solid #1f1f1f;
+        transition: .5s all;
+    }
+    .header_container.menu_collapsed .navItems_container {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
     }
 }
 
@@ -77,6 +89,7 @@
         height: 80px;
     }
 }
+
 @media screen and (max-width: 390px) {
     .header_container {
         min-height: 70px;
@@ -88,6 +101,22 @@
     .nav_container {
         justify-content: center;
     }
+    .menu_container {
+        top: 15px;
+        right: 15px;
+    }
+}
+@media screen and (max-width: 345px) {
+    .header_container {
+        min-height: 65px;
+    }
+    .logo_container {
+        height: 65px;
+    }
+    .menu_container {
+        top: 12px;
+        right: 12px;
+    }
 }
 
 @media screen and (max-width: 321px) {
@@ -97,8 +126,11 @@
     .logo_container {
         height: 65px;
     }
+    .nav_container {
+        padding: 40px 50px;
+    }
 }
-@media screen and (max-width: 281px) {
+@media screen and (max-width: 315px) {
     .header_container {
         min-height: 55px;
     }
@@ -112,4 +144,5 @@
     .nav_container {
         width: 40px;
     }
+
 }
