--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
     background-color: black;
+    margin-bottom: 50px;
 }
 
 .photo {
@@ -29,10 +30,4 @@
     text-shadow: 0 0 0 #111111;
     color: #2370bb;
     font-size: 25px;
-}
-
-.space {
-    width: 100%;
-    height: 100px;
-    background-color: black;
 }
