--- a/src/components/SocialNetworks/SocialNetworks.module.css
+++ b/src/components/SocialNetworks/SocialNetworks.module.css
@@ -1,5 +1,6 @@
 .icons {
     display: flex;
+    outline: none;
 }
 .icon_box {
     width: 50px;
@@ -12,11 +13,13 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+
 }
 .icon {
     width: 50%;
     height: 50%;
 }
+
 .icon img {
     width: 100%;
 }
