--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,13 @@
 .header {
     display: flex;
     justify-content: center;
+    position: fixed;
+    width: 100%;
+    background-color: #000000;
+    z-index: 1;
+    box-shadow: 0 0 10px #525252;
+    padding-bottom: 10px;
 }
-
 .logo {
     height: 100%;
 }
