--- a/src/components/Skills/SkillItem/SkillsItem.module.css
+++ b/src/components/Skills/SkillItem/SkillsItem.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     font-family: Poppins, serif;
-    transition-duration: .5s;
+    transition: .5s;
     min-height: 350px;
     width: 330px;
 }
@@ -18,6 +18,7 @@
     width: 295px;
     min-height: 200px;
 }
+
 .icon {
     position: absolute;
     top: -40px;
@@ -67,19 +68,24 @@
 
 .item:hover .skill h3 {
     color: #0d82c6;
-    transition: .5s;
 }
+
 .item:hover .icon {
     border: 3px solid #0d82c6;
-    transition: .5s;
 }
+
 .item:hover .icon {
     transform: rotate(360deg);
-    transition: 1s;
 }
+
 .item:hover {
-    transition: .5s;
     transform: translateY(-20px);
+}
+
+@media screen and (max-width: 385px) {
+    .skill p {
+        font-size: 14px;
+    }
 }
 
 @media screen and (max-width: 321px) {
@@ -91,7 +97,8 @@
         width: 280px;
     }
 }
-@media screen and (max-width: 281px) {
+
+@media screen and (max-width: 290px) {
     .skill {
         width: 250px;
     }
@@ -104,7 +111,9 @@
         width: 70px;
         height: 70px;
     }
+
     .skill p {
+        font-size: 13px;
         margin-bottom: 30px;
     }
 }
