--- a/src/components/Header/Containers.module.css
+++ b/src/components/Header/Containers.module.css
@@ -77,7 +77,7 @@
     .header_container.menu_collapsed .navItems_container {
         display: flex;
         flex-direction: column;
-        align-items: start;
+        align-items: flex-start;
     }
 }
 
