--- a/src/components/Header/Containers.module.css
+++ b/src/components/Header/Containers.module.css
@@ -5,6 +5,7 @@
     min-height: 90px;
     max-height: 0;
     overflow: hidden;
+    transition: .5s;
 }
 
 .logo_container {
@@ -26,21 +27,22 @@
     flex-direction: row;
     justify-content: space-around;
     width: 100%;
-    transition: .5s;
 }
 
 .menu_container {
     position: absolute;
     top: 20px;
     right: 20px;
-    display: none;
+    display: flex;
+    visibility: hidden;
+    opacity: 0;
     justify-content: center;
     align-items: center;
     width: 50px;
     height: 50px;
     border-radius: 50%;
     background-color: white;
-    transition-duration: .3s;
+    transition: .5s;
 }
 
 .menu_container > div {
@@ -66,13 +68,15 @@
         display: none;
     }
     .menu_container {
-        display: flex;
+        visibility: visible;
+        opacity: 1;
     }
     .header_container.menu_collapsed {
-        display: block;
+        flex-direction: column;
+        min-height: 290px;
         max-height: 300px;
         border-bottom: 3px solid #1f1f1f;
-        transition: .5s all;
+
     }
     .header_container.menu_collapsed .navItems_container {
         display: flex;
