--- a/src/components/Header/Nav/MiniNav/MiniNav.module.css
+++ b/src/components/Header/Nav/MiniNav/MiniNav.module.css
@@ -8,11 +8,13 @@
     border-radius: 20px 0 0 20px;
     display: flex;
     flex-direction: column;
+    transition: .5s;
 }
 
 .miniNav a {
     text-decoration: none;
 }
+
 .menuItem {
     width: 100%;
     height: 50px;
@@ -36,6 +38,7 @@
 
 @media screen and (max-width: 935px) {
     .miniNav {
-        display: none;
+        visibility: hidden;
+        opacity: 0;
     }
 }
