--- a/src/components/Skills/SkillItem/SkillsItem.module.css
+++ b/src/components/Skills/SkillItem/SkillsItem.module.css
@@ -5,6 +5,7 @@
     transition: .5s;
     min-height: 350px;
     width: 330px;
+
 }
 
 .skill {
@@ -30,7 +31,7 @@
     border: 3px solid #111111;
     border-radius: 100%;
     background-color: #000000;
-    transition-duration: .5s;
+    transition: .5s;
 }
 
 .icon img {
@@ -46,7 +47,7 @@
     text-align: center;
     margin-bottom: 20px;
     font-size: 18px;
-    transition-duration: .5s;
+    transition: .3s;
 }
 
 .skill p {
