--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -1,6 +1,7 @@
 .title {
     margin-bottom: 60px;
     font-family: Poppins, serif;
+    transition: .5s;
 }
 
 .title h2 {
@@ -8,6 +9,7 @@
     padding-bottom: 20px;
     border-bottom: 3px solid #0d82c6;
     color: white;
+    transition: .5s;
 }
 
 .title span {
